--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,9 +18,14 @@ jobs:
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     - name: Run unit tests and build JAR
-      run: ./gradlew test desktop:dist
+      run: ./gradlew test desktop:dist server:dist
     - name: Upload desktop JAR for testing
       uses: actions/upload-artifact@v2
       with:
         name: Desktop JAR (zipped)
         path: desktop/build/libs/Mindustry.jar
+    - name: Upload server JAR for testing
+      uses: actions/upload-artifact@v2
+      with:
+        name: Server JAR (zipped)
+        path: server/build/libs/server-release.jar
